--- a/2Menu.html
+++ b/2Menu.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Kudos Homepage</title>
+  <title>Kudos Menu</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Kudos">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="2Menu.css">
   <link rel="stylesheet" href="0Nav.css"><!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <!--CDN-->
@@ -21,19 +21,19 @@
 <body>
   <header>
     <div id="HeaderOnScroll">
-      <a href="#"><img src="AllNavigationNav.svg" class="SquareIcon" alt="All Navigations"></a><a
-        href="9Aboutus.html"><img src="AboutUsNav.svg" alt="About Us" class="RecIcon"></a><a href="#"><img
-          src="SignInNav.svg" class="SquarerightIcon" alt="Sign In"></a><a href="4OrderList.html"><img
-          src="OrderListNav.svg" alt="Order List" class="RecrightIcon"></a><br>
+      <img src="AllNavigationNav.svg" class="SquareIcon" alt="AllNavigationNav"><a href="9Aboutus.html"><img
+          src="AboutUsNav.svg" alt="About Us" class="RecIcon"></a><img src="SignInNav.svg" class="SquarerightIcon"
+        alt="SignInNav"><a href="Order%20List.html"><img src="OrderListNav.svg" alt="Order List"
+          class="RecrightIcon"></a><br>
       <br>
       <br>
       <div>
-        <a href="2Menu.html"><img src="MenuNav.svg" class="Nav1" alt="MenuNav"></a> <a href="3Promotion.html"><img
-            src="PromotionsNav.svg" class="Nav1" alt="PromotionsNav"></a> <a href="1Home.html"><img
+        <a href="2Menu.html"><img src="MenuNav.svg" class="Nav1" alt="MenuNav"></a> <a href="3Promotion.html">
+          <img src="PromotionsNav.svg" class="Nav1" alt="PromotionsNav"></a> <a href="index.html"><img
             src="FinalLogoNav.png" alt="Homepage" id="NavLogoCenter"></a> <a href="7StoreLocator.html"><img
             src="StoreLocatorNav.svg" alt="Store Locator" class="Nav11"></a> <a href="8Contactus.html"><img
             src="ConatctUsNav.svg" class="Nav11" alt="ConatctUsNav"></a>
-      </div><br>
+      </div>
     </div>
   </header>
   <main>
@@ -47,8 +47,8 @@
     <br>
     <br>
     <br>
-    <br>
-    <!--========Using Bootstraps========-->
+    <h2>Menu</h2>
+    <!--Using Bootstraps-->
     <div class="container">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
@@ -62,91 +62,97 @@
         <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="sr-only">Previous</span></a>
         <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="sr-only">Next</span></a>
       </div>
-    </div>
-    <br>
-    <br>
-    <br>
+    </div><br>
     <!--cards-->
     <table class="tablelayout">
+      <caption>
+        <h3>Singnature's</h3>
+      </caption>
       <tr>
         <td>
           <div class="card">
-            <a href="#"></a><img src="Latest1.png" alt="Make Minion Mischief">
+            <a href="#"><img src="Menu.png" alt="Kudos's Singnature Nuggets"></a>
             <div class="container">
-              <h4>Make Minion Mischief</h4>
+              <h5>Kudos's Singnature<br>
+                Nuggets</h5>
+              <p>RM 3.00</p>
             </div>
           </div>
         </td>
         <td>
           <div class="card">
-            <a href="#"></a><img src="Latest5.png" alt="MIGHTY SHOGUN">
+            <img src="Menu2.png" alt="Kudos's Singnature Drumstick">
             <div class="container">
-              <h4>Grab your<br>
-                MIGHTY SHOGUN</h4>
+              <h5>Kudos's Singnature<br>
+                Drumstick</h5>
+              <p>RM 5.00</p>
             </div>
           </div>
         </td>
         <td>
           <div class="card">
-            <a href="#"></a><img src="Latest3.png" alt="Kudos singnature Banana Pie">
+            <img src="Menu3.png" alt="Kudos's Crispy Chicken">
             <div class="container">
-              <h4>Kudos singnature<br>
-                Banana Pie</h4>
+              <h5>Kudos's Crispy<br>
+                Chicken</h5>
+              <p>RM 7.00</p>
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="card">
+            <img src="Menu4.png" alt="Kudos's Singnature Porridge">
+            <div class="container">
+              <h5>Kudos's Singnature<br>
+                Porridge</h5>
+              <p>RM 8.00</p>
             </div>
           </div>
         </td>
       </tr>
+    </table>
+    <table class="tablelayout">
+      <caption>
+        <h3>Beverage</h3>
+      </caption>
       <tr>
         <td>
           <div class="card">
-            <a href="#"></a><img src="Latest4.png" alt="The EXTRA Puas Sets">
+            <img src="Drink1.png" alt="Kudos's Singnature SunDrink" class="menu-drink">
             <div class="container">
-              <h4>The EXTRA Puas Sets</h4>
+              <h5>Kudos's Singnature<br>
+                SunDrink<sup>©</sup></h5>
+              <p>RM 7.00</p>
             </div>
           </div>
         </td>
         <td>
           <div class="card">
-            <a href="#"></a><a><img src="Latest8.png" alt="Classic Love"></a>
+            <img src="Drink2.png" alt="Latest Promotion" class="menu-drink">
             <div class="container">
-              <h4>Your's<br>
-                Classic Love</h4>
+              <h5>Kudos's Singnature<br>
+                LemonDrink<sup>©</sup></h5>
+              <p>RM 7.00</p>
             </div>
           </div>
         </td>
         <td>
           <div class="card">
-            <a href="#"></a><img src="Latest6.png" alt="SET DUO">
+            <a><img src="Drink3.png" alt="Latest Promotion" class="menu-drink"></a>
             <div class="container">
-              <h4>The SET DUO is back</h4>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="card">
-            <a href="#"></a><img src="Latest7.png" alt="Latest Promotion">
-            <div class="container">
-              <h4>Collect Them<br>
-                NOW !</h4>
+              <h5>Kudos's Singnature<br>
+                Coke<sup>©</sup></h5>
+              <p>RM 7.00</p>
             </div>
           </div>
         </td>
         <td>
           <div class="card">
-            <a href="#"></a><img src="Latest2.png" alt="LNews Update Kudo's Delivery">
+            <a><img src="Drink4.png" alt="Latest Promotion" class="menu-drink"></a>
             <div class="container">
-              <h4>News Update Kudo's Delivery</h4>
-            </div>
-          </div>
-        </td>
-        <td>
-          <div class="card">
-            <a href="#"></a><img src="Latest9.png" alt="Latest Promotion">
-            <div class="container">
-              <h4>Add your Favourite<br>
-                To Medium Meal</h4>
+              <h5>Kudos's Singnature<br>
+                MILO<sup>©</sup></h5>
+              <p>RM 7.00</p>
             </div>
           </div>
         </td>
@@ -161,12 +167,11 @@
             href="8Contactus.html">Contact Us</a>
         </div>
         <div class="footer-heading footer-2">
-          <h3>About Us</h3><a href="8Contactus.html">FAQ</a> <a href="7StoreLocator.html">Store
-            Locator</a> <a href="8Contactus.html">Contact Us</a>
+          <h3>About Us</h3><a href="8Contactus.html">FAQ</a> <a href="7StoreLocator.html">Store Locator</a> <a
+            href="8Contactus.html">Contact Us</a>
         </div>
         <div class="footer-heading footer-3">
-          <h3>Contact Us</h3><a href="#">Sign In</a> <a href="#">Terms & Conditions</a> <a href="#">Privacy
-            Policy</a>
+          <h3>Contact Us</h3><a href="#">Sign In</a> <a href="#">Terms & Conditions</a> <a href="#">Privacy Policy</a>
         </div>
         <div class="footer-heading footer-3">
           <h3>Social Media</h3><a href="#">Facebook</a> <a href="#">Instagram</a> <a href="#">Twitter</a> <a
